--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ loader.className += " hidden"; // class "loader hidden"
 <div class="footer"></div>
 
 <div class="headcontent">
-<video autoplay muted loop id="myVideo">
+<video autoplay muted loop playsinline id="myVideo">
   <source src="video.mp4" type="video/mp4">
 </video>
 
