--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@ loader.className += " hidden"; // class "loader hidden"
 </span></center></div>
 
 
-      <div class="albumtitle"><h3>We Can't Be the Judged Ones,<br>If There's No One to Judge Us</h3></div>
+      <div class="albumtitle"><h3>I Saw You</h3></div><div class="thenewsingle"><h4>(The New Single)</h4></div>
 
-<a href="https://ffm.to/we-cant-be-the-judged-ones" target="_blank" class="button1">BUY&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;STREAM</a><p>
+<a href="https://ffm.to/i-saw-you" target="_blank" class="button1">BUY&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;STREAM</a><p>
     
-<a href="https://genius.com/Amygdala-amara-we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-lyrics" target="_blank" class="button2">LYRICS</a>
+<a href="https://genius.com/Amygdala-amara-i-saw-you-lyrics" target="_blank" class="button2">LYRICS</a>
 
- <a href="https://ffm.to/we-cant-be-the-judged-ones" target="_blank" class="albumlink"><img class="ghibli" src="ghibli.jpg"></a>
+ <a href="https://ffm.to/we-cant-be-the-judged-ones" target="_blank" class="albumlink"><img class="ghibli" src="isawyou.jpg"></a>
 
 
   </div>
