--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <div class="secondbottomline">
 
 
-<div class="mj-embedded mj-embed-shadow mj-horizontal" style="box-sizing: border-box; display: inline-block; font-family: Ubuntu, Helvetica; line-height: normal; text-align: left; background-color: transparent; box-shadow: none; padding: 0px; height: 60px; width: 600px;">
+<div class="mj-embedded mj-embed-shadow mj-horizontal" style="box-sizing: border-box; display: inline-block; font-family: 'IM Fell English', serif; line-height: normal; text-align: left; background-color: transparent; box-shadow: none; padding: 0px; height: 60px; width: 600px;">
     <div class="mj-embedded-content" style="padding: 15px; background-color: none; ">
         <div class="mj-embedded-header" style="box-sizing: border-box; font-size: 26px; max-width: 100%; width: auto; color: rgb(89, 91, 97);">
         </div>
@@ -52,7 +52,7 @@
                         <div class="w-preview-fields-content-cell" style="box-sizing: border-box; vertical-align: top; flex-grow: 1; padding: 0px 10px 10px 0px;">
                             <input class="w-preview-fields-content-cell-field-email" type="email" placeholder="Email Address" name="w-field-field-new-email" required="required" style="box-sizing: border-box; font-family: 'IM Fell English', serif; font-size: 14px; height: 36px; padding-left: 17px; margin-right: 20px; border-radius: 3px; border: 2px solid rgb(225, 225, 225); width: 100%;">
                         </div>
-                        <div class="mj-form-button" style="box-sizing: border-box; font-family: Ubuntu, Helvetica; text-align: center; vertical-align: middle; flex-grow: 1; margin: 0px; width: 35%;">
+                        <div class="mj-form-button" style="box-sizing: border-box; font-family: 'IM Fell English', serif; text-align: center; vertical-align: middle; flex-grow: 1; margin: 0px; width: 35%;">
                             <div class="mj-subscribe-button" style="box-sizing: border-box; width: auto; height: 36px; font-family: 'IM Fell English', serif; font-size: 13px; text-align: center; line-height: 36px; color: rgb(225, 225, 225); border-radius: 3px; max-width: 100%; white-space: nowrap; background-color: rgb(0, 0, 0); padding: 0px 10px;">
                                 <div class="mj-subscribe-button-content" style="box-sizing: border-box; display: inline-block; font-family: 'IM Fell English', serif; color: rgb(225, 225, 225);">SUBSCRIBE NOW!</div>
                             </div>
