--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 
-<div class="order"><a class="two">OUT SOON<br>STAY TUNED!</a></div>
+<div class="order"><a class="two">ABOUT TO BEGINN ...<br>KEEP BOTH EYES OPEN!</a></div>
 
 
 
