--- a/Confirmation Mail.html
+++ b/Confirmation Mail.html
@@ -1,18 +1,18 @@
 <div class="mj-w-double-optin-email" style="width: 100%; max-width: 600px; background-color: white; box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.35);">
-    <table class="mockup-content paint-area mj-opt-in" style="width: 100%; background-color: black; font-family: Ubuntu, Helvetica; border-collapse: collapse;">
+    <table class="mockup-content paint-area mj-opt-in" style="width: 100%; background-color: white; font-family: Ubuntu, Helvetica; border-collapse: collapse;">
         <tbody><tr class="mj-opt-in-head" style="height: 20px; line-height: 20px;"><td>&nbsp;</td></tr>
     </tbody></table>
-    <table class="mockup-content paint-area" style="width: 100%; font-family: Ubuntu, Helvetica; border-collapse: collapse;background-color: #000000;">
-            <tbody><tr style="height: 60px; line-height: 60px; width: 100%; text-align: center;"><td><div class="mj-opt-in-title paint-area paint-area--text" style="font-family: Times, serif; color:#e2e9ff; display: inline-block; vertical-align: middle;" contenteditable="true"><b class="medium-b">// letters from amygdala_amara //</b></div></td></tr>
+    <table class="mockup-content paint-area" style="width: 100%; font-family: Ubuntu, Helvetica; border-collapse: collapse;background-color: #ffffff;">
+            <tbody><tr style="height: 60px; line-height: 60px; width: 100%; text-align: center;"><td><div class="mj-opt-in-title paint-area paint-area--text" style="font-family: Times, serif; color:#2e3240; display: inline-block; vertical-align: middle;" contenteditable="true"><b class="medium-b">// letters from amygdala_amara //</b></div></td></tr>
     </tbody></table>
-    <table class="mockup-content paint-area" style="width: 100%; background-color: black; font-family: Times, serif; border-collapse: collapse;">
+    <table class="mockup-content paint-area" style="width: 100%; background-color: white; font-family: Times, serif; border-collapse: collapse;">
         <tbody><tr style="text-align: center; padding: 0 0 20px 0;">
             <td style="height: 75px; line-height: 75px; width: 100%; vertical-align: middle;">
-                <span class="mj-opt-in-subscribe-title paint-area paint-area--text" style="font-family: Times, serif; font-size: 18px; color: #e2e9ff; line-height: normal;" contenteditable="true"><b class="medium-b">{ P L E A S E / C O N F I R M / Y O U R / S U B S C R I P T I O N }</b>
+                <span class="mj-opt-in-subscribe-title paint-area paint-area--text" style="font-family: Times, serif; font-size: 18px; color: #2e3240; line-height: normal;" contenteditable="true"><b class="medium-b">{ P L E A S E / C O N F I R M / Y O U R / S U B S C R I P T I O N }</b>
                 </span>
             </td>
         </tr>
-<tr><td style="height: 75px; line-height: 75px; width: 100%; vertical-align: middle; padding: 0 60px;"><div class="mj-opt-in-display-text paint-area paint-area--text" style="text-align: left; color: #e2e9ff; margin-bottom: 90px; margin-top: 10px; line-height: normal;" contenteditable="true">
+<tr><td style="height: 75px; line-height: 75px; width: 100%; vertical-align: middle; padding: 0 60px;"><div class="mj-opt-in-display-text paint-area paint-area--text" style="text-align: left; color: #2e3240; margin-bottom: 90px; margin-top: 10px; line-height: normal;" contenteditable="true">
         *<br><br>*<br><br><br>*<br><br><br>Hey, you little person from the internet,<br><br>I feel honored, that you wanna hear from me from time to time.<br>Now you just have to hit the subscribe button down there for the very last time and I keep you updated about some stuff... about music and merch, hopefully about an upcoming tour, about life. Maybe a couple of recipes too. Or maybe not, we have to see.<br><br>If you just changed your mind simply ignore this email. If not - I'm thrilled about everything that awaits us. Do you already feel it?<br><br>Love, L 💜</div></td></tr>
         <tr>
             <td style="padding-bottom: 90px; text-align: center;">
@@ -27,6 +27,6 @@
                 <data id="end-link"></data>
             </td>
         </tr>
-        <tr><td style="text-align: left; height: 75px; line-height: 75px; width: 100%; vertical-align: middle; padding: 0 60px;"><div class="mj-opt-in-footer paint-area paint-area--text" style="display: inline-block; font-family: Times, serif; text-align: left; margin-bottom: 24px; color: #e2e9ff; line-height: normal;" contenteditable="true"><i class="medium-i" style="word-break: break-all;">If you are having troubles with the button, copy/paste the following URL in your browser: [URL]</i></div></td></tr>
+        <tr><td style="text-align: left; height: 75px; line-height: 75px; width: 100%; vertical-align: middle; padding: 0 60px;"><div class="mj-opt-in-footer paint-area paint-area--text" style="display: inline-block; font-family: Times, serif; text-align: left; margin-bottom: 24px; color: #2e3240; line-height: normal;" contenteditable="true"><i class="medium-i" style="word-break: break-all;">If you are having troubles with the button, copy/paste the following URL in your browser: [URL]</i></div></td></tr>
            </tbody></table>
 </div>
