--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 
-<div class="order"><a class="two">#OOFFOO<br>OUT NOW!</a></div>
+<div class="order"><a class="two" href="https://ffm.to/00ff00" target="_blank">#OOFFOO<br>OUT NOW!</a></div>
 
 
 
